86ewg6tr0 hp update gaps

--- a/src/styles/components/_swatch.scss
+++ b/src/styles/components/_swatch.scss
@@ -6,6 +6,8 @@
 	background-color: white;
 	background-size: calc-em(30);
 	position: relative;
+	margin-left: 0;
+	margin-right: 0;
 
 	&:hover {
 		cursor: pointer;
