[86ewg6tr0] update product card on article

--- a/src/styles/templates/_article.scss
+++ b/src/styles/templates/_article.scss
@@ -46,11 +46,11 @@
 		}
 
 		img, picture {
-			@apply rounded-t-[1.5em] px-0;
+			@apply px-0;
 		}
 
 		&__content {
-			@apply px-[8px] rounded-b-[1.5em];
+			@apply px-[8px];
 		}
 
 		.badge {
