[86ewg6tr0] update yotpo stars

--- a/src/styles/templates/_article.scss
+++ b/src/styles/templates/_article.scss
@@ -38,6 +38,10 @@
 			@apply lg:mb-12;
 		}
 
+		.review-stars__link {
+			@apply no-underline;
+		}
+
 		button {
 			@apply lg:min-h-[38px];
 			&:not(.button-overlay) {
