stockist and real results page

--- a/src/styles/templates/_pdp.scss
+++ b/src/styles/templates/_pdp.scss
@@ -303,7 +303,7 @@
             }
 
             svg {
-                @apply fill-primary;
+                @apply fill-dark;
             }
         }
         input {
