replace imagedelivery with shopify cdn

--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -33,13 +33,13 @@
 		}
 
 		.modal-body {
-			background-image: url('https://imagedelivery.net/ghVX8djKS3R8-n0oGeWHEA/c639d9fc-07a5-409b-d4e1-781c97cdfd00/public');
+			background-image: url('https://cdn.shopify.com/s/files/1/0286/1327/9779/files/public_06dc6c44-59dc-46f0-a96e-6636a305eec0.jpg?v=1772038990');
 			background-position: bottom -1px center;
 			background-repeat: no-repeat;
 			background-size: 100%;
 
 			@screen lg {
-				background-image: url('https://imagedelivery.net/ghVX8djKS3R8-n0oGeWHEA/7bfa6faa-7369-4b09-a0e6-86680e705000/public');
+				background-image: url('https://cdn.shopify.com/s/files/1/0286/1327/9779/files/public_591e61b2-f4c8-4d6e-83bb-25bbfe22b0bc.jpg?v=1772039010');
 			}
 		}
 	}
