--- a/src/styles/sections/_cart-drawer.scss
+++ b/src/styles/sections/_cart-drawer.scss
@@ -35,7 +35,7 @@
 			&__item {
 				flex: 0 0 calc-em(96);
 				width: calc-em(96);
-				@apply mr-[1.5625em];
+				@apply mr-[16px];
 
 				picture {
 					@apply px-hg;
@@ -89,6 +89,22 @@
 
 		.bfcm-btn--selected {
 			@apply bg-dark text-white hover:bg-dark !important;
+		}
+	}
+
+	.shopify-secure {
+		&:before {
+			content: ' ';
+			width: 84.5px;
+			border-top: 1px solid #A3A3A3;
+			margin-right: 30px;
+		}
+
+		&:after {
+			content: ' ';
+			width: 84.5px;
+			border-top: 1px solid #A3A3A3;
+			margin-left: 30px;
 		}
 	}
 }
